--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hero Ball: Villain Destroyer</title>
+<title>Sky Sentinel</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
     <div class="ui-overlay">
         <div class="score-panel">
             <div>Score: <span id="scoreValue">0</span></div>
-            <div>Killed: <span id="killCount">0</span></div>
-            <div>Best: <span id="highScoreValue">0</span></div>
+            <div>Eliminations: <span id="killCount">0</span></div>
+            <div>Highscore: <span id="highScoreValue">0</span></div>
         </div>
 
         <div class="start-screen" id="startScreen">
